k8s/clusters/glug-infra/answer/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: answer
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
